--- a/Components.html
+++ b/Components.html
@@ -14,6 +14,12 @@
   <body>
     <section class="py-4">
         <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <hr>
+              <h3 class="mb-3">Product cards</h3>
+            </div>
+          </div>
         <div class="row">
             <div class="col-lg-3">
                 <div class="card card-commerce mb-3">
@@ -132,6 +138,12 @@
 <!-- product details -->
 <section class="py-3">
 <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <hr>
+      <h3 class="mb-3">Product details</h3>
+    </div>
+  </div>
     <div class="row">
     <div class="col-md-6">
         <!-- images -->
@@ -230,6 +242,12 @@
 
 <section class="py-4">
     <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <hr>
+          <h3 class="mb-3">Advertisment area</h3>
+        </div>
+      </div>
     <div class="row">
      <div class="col-lg-4 class-md-4">
         <div class="card">
